# RuSemanticSearch

./: .gitignore  CODE_QUALITY.md  DATA_PIPELINE.md  PROJECT_PLAN.md  README.md  pyproject.toml
data/: documents.jsonl  eval_queries.jsonl  qrels.jsonl
docs/: DOCUMENT_SOURCES.md
src/rusemanticsearch/: __init__.py  cli.py
src/rusemanticsearch/data/: __init__.py  io.py  schemas.py
src/rusemanticsearch/eval/: __init__.py  metrics.py  validation.py
src/rusemanticsearch/retrieval/: __init__.py  base.py  bm25.py
src/rusemanticsearch/text/: __init__.py  normalize.py
tests/: test_bm25.py  test_eval_validation.py  test_io.py  test_metrics.py  test_normalize.py
